fix z-index

--- a/src/pages/Editing/editing.scss
+++ b/src/pages/Editing/editing.scss
@@ -75,7 +75,7 @@
 
   &__submit {
     position: absolute;
-    z-index: 3;
+    z-index: 4;
     top: 20px;
     right: 21px;
     color: $blueColor;
